data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_592.wast
;; 3. **Test Name: No-Operation Preceding Indirect Function Call**    - **Description**: Place a `nop` instruction immediately before a `call_indirect` instruction.    - **Constraint**: Verify correct function lookup and execution for `call_indirect`.    - **Improper Handling Check**: Tests if `nop` interferes with the table lookup or type checking for indirect calls.    - **Expected Behavior**: Consistent behavior in function resolution and execution between the two implementations.

(assert_malformed
  (module
    (table $t 1 funcref)
    (elem (i32.const 0) $f)
    (func $f)
    (func (result i32)
      nop
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch"
)